--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="card mb-3">
-            <img src="/images/Python For Beginners- live course.jpg" class="card-img-top" alt="...">
+            <img src="./images/Python For Beginners- live course.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Python For Beginner </h5>
               <p class="card-text">For successfully completing a free online course Python for Beginners - Live Course.
@@ -236,7 +236,7 @@
         </div>
         <div class="col-md-6">
           <div class="card mb-3">
-            <img src="/images/Workshop on Ethical Hacking & Cyber Security (Level 1).jpg" class="card-img-top"
+            <img src="./images/Workshop on Ethical Hacking & Cyber Security (Level 1).jpg" class="card-img-top"
               alt="...">
             <div class="card-body">
               <h5 class="card-title">Workshop on Ethical hacking and cyber security</h5>
@@ -250,7 +250,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="card mb-3">
-            <img src="/images/Salefornce Developer-virtual internship.jpg" class="card-img-top" alt="...">
+            <img src="./images/Salefornce Developer-virtual internship.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Salafornce Developer </h5>
               <p class="card-text">During the 8 Weeks period of Virtual Internship (August- October 2022), Chandu
@@ -260,7 +260,7 @@
         </div>
         <div class="col-md-6">
           <div class="card mb-3">
-            <img src="/images/Fornt End deevelopment-HTML.jpg" class="card-img-top" alt="...">
+            <img src="./images/Fornt End deevelopment-HTML.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Fornt End Development-HTML</h5>
               <p class="card-text">For successfully completing a free online course Front End Development - HTML.</p>
