--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
         <div class="col-md-6">
           <div class="card mb-3">
-            <img src="./images/Workshop on Ethical Hacking & Cyber Security (Level 1).jpg" class="card-img-top"
+            <img src="/images/Ethical Hacking.jpg" class="card-img-top"
               alt="...">
             <div class="card-body">
               <h5 class="card-title">Workshop on Ethical hacking and cyber security</h5>
